--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,26 +1,47 @@
-<header class="header">
-	<div class="left">
-		<h4>"It is not simply enough to know the light…a Jedi must feel the tension between the two sides of the Force…in himself and in the universe."<br> -Thon</h4>
+<div class="container-responsive">
+	<div class="header">
+		<div class="left">
+			<h4>"It is not simply enough to know the light…a Jedi must feel the tension between the two sides of the Force…in himself and in the universe."<br> -Thon</h4>
+		</div>
+		<div class="middle">
+			<img class="middle-image" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHNxjyoTFiUto7IjQzcmzWJPOW028mpZJD70HospgbyO72uihgbA">
+			<!--<h3 id="headertext">May the source be with you.</h3>-->
+		</div>
+		<div class="right">
+			<h4>"Evil is a word used by the ignorant and the weak. The dark side is about survival. It's about unleashing your inner power. It glorifies the strength of the individual."<br>-Darth Zannah</h4>
+		</div>
 	</div>
-	<div class="middle">
-	<img class="middle-image" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHNxjyoTFiUto7IjQzcmzWJPOW028mpZJD70HospgbyO72uihgbA">
-	<h3 id="headertext">May the source be with you.</h3>
-	</div>
-	<div class="right">
-		<h4>"Evil is a word used by the ignorant and the weak. The dark side is about survival. It's about unleashing your inner power. It glorifies the strength of the individual."<br>-Darth Zannah</h4>
-	</div>
-</header>
-<!--<div class="txt">
+	<!--<div class="txt">
 Star Wars: The Force Awakens official trailor!
 </div>-->
-<div>
+	<!--<div>
 	<iframe class="tfa" width="500" height="280" src="https://www.youtube.com/embed/ngElkyQ6Rhs" frameborder="0" allowfullscreen></iframe>
+</div>-->
+	<div class="body-container">
+		<div class="title clear">
+			<b>Excited for the upcoming Star Wars: The Force Awakens? So am I! Here is all you need to know...</b>
+		</div>
+		<div class="cast">
+			<div class="title">
+				The Cast
+			</div>
+			Daisy Ridley ... Rey
+			<br> Carrie Fisher ... Leia
+			<br> Mark Hamill ... Luke Skywalker
+			<br> Harrison Ford ... Han Solo
+			<br> Gwendoline Christie ... Captain Phasma
+			<br> Adam Driver ... Kylo Ren
+			<br> Peter Mayhew ... Finn
+			<br> Andy Serkis ... Supreme Leader Snoke
+			<br> Kenny Baker ... R2-D2
+		</div>
+		<div>
+			<iframe class="tfa" width="500" height="280" src="https://www.youtube.com/embed/ngElkyQ6Rhs" frameborder="0" allowfullscreen></iframe>
+		</div> <div class="release-date">
+		<div class="title">
+			Release date
+		</div>
+		December 17, 2015
+	</div>
 </div>
-<div>
-	
 </div>
-
-
-
-
-
