fixed loading issue

--- a/app/info/info.html
+++ b/app/info/info.html
@@ -106,12 +106,12 @@
 	</div>
 </div>
 </div>
-<div ng-show='showLoadingPlanets' class="loading planets">
-	Loading...
+<div class="loading planets">
+	<div ng-show='showLoadingPlanets'>Loading...</div>
 </div>
-<div ng-show='showLoadingChars' class="loading characters">
-	Loading...
+<div  class="loading characters">
+	<div ng-show='showLoadingChars'>Loading...</div>
 </div>
-<div ng-show='showLoadingStarships' class="loading starships">
-	Loading...
+<div  class="loading starships">
+	<div ng-show='showLoadingStarships'>Loading...</div>
 </div>
