--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,14 +1,14 @@
 <div class="container-responsive">
 	<div class="header">
 		<div class="left">
-			<h4>"It is not simply enough to know the light…a Jedi must feel the tension between the two sides of the Force…in himself and in the universe."<br> -Thon</h4>
+			<h5>"It is not simply enough to know the light…a Jedi must feel the tension between the two sides of the Force…in himself and in the universe."<br> -Thon</h5>
 		</div>
 		<div class="middle">
 			<img class="middle-image" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRHNxjyoTFiUto7IjQzcmzWJPOW028mpZJD70HospgbyO72uihgbA">
 			<!--<h3 id="headertext">May the source be with you.</h3>-->
 		</div>
 		<div class="right">
-			<h4>"Evil is a word used by the ignorant and the weak. The dark side is about survival. It's about unleashing your inner power. It glorifies the strength of the individual."<br>-Darth Zannah</h4>
+			<h5>"Evil is a word used by the ignorant and the weak. The dark side is about survival. It's about unleashing your inner power. It glorifies the strength of the individual."<br>-Darth Zannah</h5>
 		</div>
 	</div>
 	<!--<div class="txt">
@@ -19,7 +19,7 @@ Star Wars: The Force Awakens official trailor!
 </div>-->
 	<div class="body-container">
 		<div class="title clear">
-			<b>Excited for the upcoming Star Wars: The Force Awakens? So am I! Here is all you need to know...</b>
+			<b>Excited for the upcoming Star Wars: The Force Awakens? <br> So am I! Here is all you need to know...</b>
 		</div>
 		<div class="cast">
 			<div class="title">
